edit RecommendationsHandlerImpl